Fix bootstrap layout issues of x-overflow scrolling

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -11,4 +11,12 @@
 
 body {
   background-color: $bgcolor;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+* {
+  max-width: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
